--- a/neighborhood-app/src/styles.css
+++ b/neighborhood-app/src/styles.css
@@ -505,3 +505,13 @@ h4 {
     margin: 25px;
     border-radius: 50%;
 }
+
+footer{
+    height: 95px;
+    width: 100%;
+    background-color: #155263;
+}
+
+footer p{
+    color: #eeeeee;
+}
